--- a/package.json
+++ b/package.json
@@ -9,9 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/material": "^5.10.17",
+    "@mui/x-date-pickers": "^5.0.9",
+    "crypto-js": "^4.1.1",
+    "dayjs": "^1.11.7",
+    "moment": "^2.29.4",
+    "mysql2": "^2.3.3",
     "next": "13.0.6",
+    "nodemailer": "^6.8.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "react-loader-spinner": "^5.3.4"
   },
   "devDependencies": {
     "eslint": "8.29.0",
