booking and carta changes 	modified:   components/booking/Booking.jsx 	modified:   components/booking/BookingFinished.jsx 	modified:   components/carta/Carta.jsx 	modified:   components/carta/CategoriesNav.jsx 	modified:   components/global.js 	modified:   package-lock.json 	modified:   package.json 	modified:   pages/_app.js 	modified:   pages/api/dbconfig2.js 	modified:   pages/api/email.js 	modified:   styles/Categories.module.css 	modified:   styles/CategoriesNav.module.css 	modified:   yarn.lock

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/material": "^5.10.17",
     "@mui/x-date-pickers": "^5.0.9",
+    "@next/bundle-analyzer": "^13.0.6",
     "bootstrap": "^5.2.3",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.7",
